# spheres

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  Sphere.hpp  main.cpp
shaders/: triangle.frag  triangle.vert
